--- a/templates/index.html
+++ b/templates/index.html
@@ -37,13 +37,13 @@
                 </select>
                 <br>
                 <select class="form-input" name="Polyuria">
-                    <option value="">Polyuria</option>
+                    <option value="">Polyuria (excessive urine)</option>
                     <option value="0">No</option>
                     <option value="1">Yes</option>
                 </select>
                 <br>
                 <select class="form-input" name="Polydipsia">
-                    <option value="">Polydipsia</option>
+                    <option value="">Polydipsia (excessive thirst)</option>
                     <option value="0">No</option>
                     <option value="1">Yes</option>
                 </select>
@@ -61,13 +61,13 @@
                 </select>
                 <br>
                 <select class="form-input" name="Polyphagia">
-                    <option value="">Polyphagia</option>
+                    <option value="">Polyphagia (excesive eating)</option>
                     <option value="0">No</option>
                     <option value="1">Yes</option>
                 </select>
                 <br>
                 <select class="form-input" name="Genital_thrush">
-                    <option value="">Genital Thrush</option>
+                    <option value="">Genital Thrush </option>
                     <option value="0">No</option>
                     <option value="1">Yes</option>
                 </select>
@@ -85,7 +85,7 @@
                 </select>
                 <br>
                 <select class="form-input" name="Irritability">
-                    <option value="">Irritability</option>
+                    <option value="">Irritability (feeling of agitation)</option>
                     <option value="0">No</option>
                     <option value="1">Yes</option>
                 </select>
@@ -97,7 +97,7 @@
                 </select>
                 <br>
                 <select class="form-input" name="partial_paresis">
-                    <option value="">Partial Paresis</option>
+                    <option value="">Partial Paresis (muscular weakness)</option>
                     <option value="0">No</option>
                     <option value="1">Yes</option>
                 </select>
@@ -109,7 +109,7 @@
                 </select>
                 <br>
                 <select class="form-input" name="Alopecia">
-                    <option value="">Alopecia</option>
+                    <option value="">Alopecia (huge hair-fall)</option>
                     <option value="0">No</option>
                     <option value="1">Yes</option>
                 </select>
