--- a/templates/result.html
+++ b/templates/result.html
@@ -21,9 +21,9 @@
 		<!-- Result -->
 		<div class="results">
 			{% if prediction==1 %}
-				<h1><span class='Good Quality'>Contact Doctor! You ar having +ve symptoms for DIABETES.</span></h1>
+				<h1><span class='Good Quality'>Contact Doctor! You are having +ve symptoms for DIABETES.</span></h1>
 			{% elif prediction==0 %}
-				<h1><span class='Bad Quality'>Relax! You ar having -ve symptoms for DIABETES.</span></h1>
+				<h1><span class='Bad Quality'>Relax! You are having -ve symptoms for DIABETES.</span></h1>
 			{% endif %}
 		</div>
 
